--- a/src/Components/Article/Article.css
+++ b/src/Components/Article/Article.css
@@ -1,7 +1,5 @@
 .article-container{
-    margin-top: 20px;
-    margin-left: 40px;
-    margin-bottom: 20px;
+    margin: 40px 20px;
     padding-bottom: 20px;
     text-align: left;
     border-bottom: 1px solid rgba(17, 17, 17, 0.15);
@@ -33,4 +31,16 @@
 .profile h3, h6{
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+.mark-as-read{
+    color: blue;
+    text-decoration: underline;
+}
+
+/*phone devices*/
+@media only screen and (max-width:688px) {
+    .article-container{
+        margin:40px 0;
+    }
 }
