--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -3,8 +3,17 @@
     flex-direction: column;
 }
 
+.sidebar p{
+    background-color: white;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: left;
+}
+
 .spent-time{
     margin-top: 20px;
+    margin-bottom: 20px;
     margin-left: 50px;
     margin-right: 50px;
     background-color: #6047ec30;
@@ -19,4 +28,14 @@
     margin-right: 50px;
     background: #1111110D;
     border-radius: 10px;
+}
+
+/*phone devices*/
+@media only screen and (max-width:688px) {
+    .spent-time{
+        margin: 10px 0 ;
+    }
+    .bookmarked{
+        margin: 30px 0;
+    }
 }
