--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -22,7 +22,7 @@
     border-radius: 10px;
 }
 
-.bookmarked{
+.bookmark-container{
     margin-top: 20px;
     margin-left: 50px;
     margin-right: 50px;
@@ -35,7 +35,7 @@
     .spent-time{
         margin: 10px 0 ;
     }
-    .bookmarked{
+    .bookmark-container{
         margin: 30px 0;
     }
 }
